# ai-dash-backend

./: .env.example  .gitignore  Makefile  RUNBOOK.md  conftest.py  docker-compose.dev.yml  docker-compose.test.yml  package-lock.json  package.json  pyproject.toml
app/: config.py  database.py  main.py  redis.py
app/admin/: router.py  service.py  test_admin.py
app/auth/: db_create.py  e2e_reset.py  models.py  router.py  seed.py  service.py  test_router.py  test_service.py
app/charts/: conftest.py  d3_renderer.py  d3_validator.py  models.py  router.py  test_chat.py  test_d3_renderer.py  test_d3_validator.py  test_router.py
app/connections/: encrypted.py  models.py  probe.py  router.py  seed_live.py  test_models.py  test_probe.py  test_router.py  test_schema_tree.py
app/datasets/: models.py  router.py  test_router.py
app/explore/: router.py  schema_service.py  test_router.py  test_schema_service.py
app/query/: query_service.py  router.py  test_query_service.py  test_router.py
